Register Api Endpoint

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 DB_URI = mongodb+srv://GrigoriSchneider:l4lgdRkBnqUFReU6@nodeexpressprojects.5oy4d6g.mongodb.net/ecommerce?retryWrites=true&w=majority
+JWT_SECRET_KEY = supersecretpassword2023
